data/all_generated_tests/raw_wast_tests/if_TypeMismatchinControlFlowInstructions_1958.wast
;; 9. **Test Description**: Design a test for a `loop` instruction within an `if` block where the inner loop produces a mismatching type (`i32` vs expected `f32`).    - **Constraint Checked**: Validate correct type transitions within loops nested in conditionals.    - **Expected Behavior**: The test would expose failures in handling control flow type mismatches in nested constructs.

(assert_invalid
  (module
    (func $loop-in-if-type-mismatch (result f32)
      (i32.const 1)
      (if (result f32)
        (then
          (loop (result f32)
            (i32.const 10) 
            (br 1)
          )
        )
        (else
          (f32.const 1.0)
        )
      )
    )
  )
  "type mismatch"
)